--- a/css/hangar.css
+++ b/css/hangar.css
@@ -58,7 +58,7 @@
 }
 body{
     
-    background-image: url("../img/Fondo3.jpg");
+   background-image: url(../img/Fondo3.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
