--- a/css/index.css
+++ b/css/index.css
@@ -50,3 +50,21 @@ button:hover{
     border-color: rgb(100, 165, 3);
 
 }
+@media(max-width :900px) {
+    body{
+        background-image: url("../img/Fondo\ 1.0.jpg");
+        .titulos{
+            display: inline-block;
+            width: 80%;
+            h2{
+                font-size: 25px;
+                
+            }
+            p{
+                margin-top: 10%;
+                font-size: 15px;
+                margin-bottom: 30%;
+            }
+        }
+    }
+}
