--- a/css/index.css
+++ b/css/index.css
@@ -66,5 +66,9 @@ button:hover{
                 margin-bottom: 30%;
             }
         }
+        .piepag{
+            position: fixed;
+            bottom: :0;
+        }
     }
 }
