--- a/css/index.css
+++ b/css/index.css
@@ -67,8 +67,7 @@ button:hover{
             }
         }
         .piepag{
-            position: fixed;
-            bottom: :0;
+           margin-top: 20%;
         }
     }
 }
