--- a/css/hangar.css
+++ b/css/hangar.css
@@ -1,72 +1,82 @@
-*{
+* {
     margin: 0px;
     font-family: century gothic;
     color: rgba(255, 255, 255, 0.849);
 }
-.contenedor{
+
+.contenedor {
     margin-top: 5%;
 }
-.titulo{
-    
+
+.titulo {
+
     background-color: rgba(20, 20, 20, 0.548);
     display: inline-block;
     width: 100%;
 
-    .texto{
+    .texto {
         vertical-align: middle;
-        
-    display: inline-block;
-    width: 50%;
-    margin: 2% 2%;
-  
-    h2{
-        font-size: 35px;
-        color: white;
+
+        display: inline-block;
+        width: 50%;
+        margin: 2% 2%;
+
+        h2 {
+            font-size: 35px;
+            color: white;
+        }
+
+        p {
+            margin-left: 1%;
+        }
     }
-    p{
-        margin-left: 1%;
-    }
-    }
-    .id{
+
+    .id {
         border-radius: 5px;
         margin-left: 12%;
         vertical-align: middle;
-        color: white    ;
+        color: white;
         display: inline-block;
         width: 25%;
         padding: 1%;
         background-color: rgba(0, 0, 0, 0.301);
 
-        .datos{
+        .datos {
             vertical-align: middle;
             display: inline-block;
         }
+
         font-size: 10px;
-        .foto{
+
+        .foto {
 
             margin-left: 15%;
             vertical-align: middle;
             display: inline-block;
-        img{
-            width: 60px;
-        }
+
+            img {
+                width: 60px;
+            }
         }
     }
-    .id:hover{
+
+    .id:hover {
         background-color: black;
     }
 }
-body{
-    
+
+body {
+
     background-image: url("../img/Fondo3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    
+
 }
-.tarjeta{
-    
- 
+
+.tarjeta {
+
+
     vertical-align: middle;
     display: inline-block;
     background-color: rgba(0, 0, 0, 0.425);
@@ -79,27 +89,32 @@ body{
     width: 20%;
     margin-left: 3%;
     margin-bottom: 2%;
-    img{
+
+    img {
         margin-left: 35%;
         margin-top: 6%;
         width: 30%;
         border-radius: 5px 5px 0px 0px;
     }
-    h3{
+
+    h3 {
         font-size: 25px;
         text-align: center;
         margin-bottom: 10%;
     }
-    .cuerpo{
+
+    .cuerpo {
         padding: 6%;
         height: 300px;
-        p{
+
+        p {
             margin-bottom: 10%;
         }
-        button{
+
+        button {
             margin: 3%;
             text-align: center;
-            padding: 3% 30% ;
+            padding: 3% 30%;
             border-style: solid;
             border-width: 1px;
             border-color: rgba(255, 255, 255, 0.171);
@@ -110,20 +125,71 @@ body{
     }
 
 }
-.tarjeta:hover{
+
+.tarjeta:hover {
     /* background-color: rgba(0, 0, 90, 0.349); */
-        background-color: rgba(255, 255, 255, 0.062);
-    button:hover{
+    background-color: rgba(255, 255, 255, 0.062);
+
+    button:hover {
         background-color: rgb(255, 153, 0);
         color: rgb(255, 255, 255);
         font-weight: bold;
         border-color: black;
-        
+
     }
 }
 
-.piepag{
+.piepag {
     padding: 2%;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.493);
+}
+
+@media (max-width:950px) {
+    body {
+        background-image: url("../img/Fondo\ 3.0.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+        overflow-x: hidden;
+    }
+
+    .titulo {
+        .texto {
+            display: block;
+            width: 100%;
+            margin-top: 5%;
+            margin-left: 3%;
+            h2 {
+                font-size: 20px;
+                margin-bottom: 1%;
+            }
+            p{
+                font-size: 10px;
+            }
+
+        }
+
+        .id {
+            display: block;
+            width: 75%;margin-top: 5%;
+            margin-bottom: 5%;
+            .datos{
+                margin-left: 10%;
+                h2 {
+                font-size: 10px;
+            }
+            p{
+                font-size: 5px;
+            }
+            
+            }
+            
+        }
+    }
+    .tarjeta{
+        display: block;
+        width: 90%;
+        margin-left: 4%;
+    }
 }
