--- a/css/hangar.css
+++ b/css/hangar.css
@@ -2,6 +2,7 @@
     margin: 0px;
     font-family: century gothic;
     color: rgba(255, 255, 255, 0.849);
+    text-decoration: none;
 }
 
 .contenedor {
@@ -61,7 +62,7 @@
     }
 
     .id:hover {
-        background-color: black;
+        background-color: rgb(90, 90, 90);
     }
 }
 
@@ -112,7 +113,8 @@ body {
         }
 
         button {
-            margin: 3%;
+           
+            width: 100%;
             text-align: center;
             padding: 3% 30%;
             border-style: solid;
@@ -121,6 +123,7 @@ body {
             border-radius: 5px;
             background-color: black;
             font-weight: bold;
+            
         }
     }
 
@@ -191,5 +194,6 @@ body {
         display: block;
         width: 90%;
         margin-left: 4%;
+
     }
 }
